users and profile

--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
 
                 <li><a href="./">Home</a></li>
                 <li><a href="#" onclick="logOutUsers()" id="logOutButton">Logout</a></li>
-                <li><a href="#" onclick="getUserInfo()" id="btn-Profile" >Profile</a></li>
-                <li><a href="#" onclick="getUserInfo()" id="btn-Bank" >Bank</a></li>
+                <li><a href="#"  id="btn-Profile" >Profile</a></li>
+                <li><a href="#"  id="btn-Bank" >Bank</a></li>
                
 
             </ul>
