--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,8 @@
 
     <div class="container" id="login">
         <h1>Login</h1>
+        <p>email: Test@gmail.com / 
+        password: 123456</p>
         <p>Please login in this form.</p>
         <hr>
 
